[package]
edition = "2021"
name = "lapce-typescript"
version = "1.0.2"
resolver = "2"

[target.'cfg(target_os = "wasi")'.dependencies]

# default deps for all lapce plugins
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lapce-plugin = { git = "https://github.com/lapce/lapce-plugin-rust.git" }

[profile.release]
lto = true
opt-level = 's'
codegen-units = 1
strip = true
