[package]
edition = "2021"
name = "lapce-typescript"
version = "0.0.0"
resolver = "2"

[target.'cfg(target_os = "wasi")'.dependencies]

# default deps for all lapce plugins
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lapce-plugin = { path = "../lapce-plugin-rust" }

[profile.release]
lto = true
opt-level = 's'
codegen-units = 1
strip = true
panic = 'abort'
